crates/toml/tests/snapshots/invalid/integer/arabic-zero-02.stderr
TOML parse error at line 1, column 18
  |
1 | arabic-zero-02 = 1_0٠
  |                  ^^^^^
integer number overflowed
